app/service-echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app.kubernetes.io/name: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
